--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cmdk": "^1.0.0",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.473.0",
     "next-themes": "^0.4.4",
@@ -32,23 +33,21 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.19.0",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.18.0",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.21.0",
+    "typescript-eslint": "^8.23.0",
     "vite": "^6.0.5"
   }
 }
