--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cmdk": "^1.0.0",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.31.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.473.0",
